updated landing page

--- a/public/landing-page.html
+++ b/public/landing-page.html
@@ -9,7 +9,10 @@
     </head>
 
     <body>
-        <nav role="navigation">Nav</nav>
+        <nav role="navigation">
+        <p>Nav</p>
+        <a href="/sign-in">Sign-in</a>
+        </nav>
         <main role="main">
             <header class="main-header" role="banner">
                 <h1>Co<sub>2</sub>mmute Calculator</h1>
