updated signin page and wireframe

--- a/public/landing-page.html
+++ b/public/landing-page.html
@@ -16,6 +16,21 @@
         <a href="/sign-in">Sign-in</a>
         </nav>
         <main role="main">
+           <section id="sign-in-section">
+               <header id="sign-in-header"><h5>Sign-in to Co<sub>2</sub>mmute Calculator</h5></header>
+               <form class="signin-form">
+                   <div>
+                       <label for="username"> Username</label>
+                       <input type="text" placeholder="Username" name="username" id="username"/>
+                   </div>
+                   <div>
+                       <label for="password">Password</label>
+                       <input type="text" placeholder="Password" name="password" id="password"/>
+                   </div>
+                   <button type="submit">Sign in</button>
+               </form>
+               <p>Not registered yet? <a href=""Click here</p>
+           </section>
             <header class="main-header" role="banner">
                 <h1>Co<sub>2</sub>mmute Calculator</h1>
             </header>
@@ -27,7 +42,7 @@
                     <p>[<em>infographic with stats of biking vs driving</em>]</p>
 
             </section>
-            <section class="sign-up">
+            <section id="sign-up">
                 <header><h3>Start Calculating</h3></header>
               <form class="signup-form">
                   <div>
