added page link

--- a/public/landing-page.html
+++ b/public/landing-page.html
@@ -29,7 +29,7 @@
                    </div>
                    <button type="submit">Sign in</button>
                </form>
-               <p>Not registered yet? <a href=""Click here</p>
+               <p>Not registered yet? <a href="#sign-up">Click here</a></p>
            </section>
             <header class="main-header" role="banner">
                 <h1>Co<sub>2</sub>mmute Calculator</h1>
