--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-<!--
 <!DOCTYPE html>
 
 <html lang='en'>
@@ -8,16 +7,61 @@
         <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
-        <link rel="stylesheet" type="text/css" href="user-input-page.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body>
         <nav role="navigation">
-            <p>Nav</p>
+        <p>Nav</p>
+            <a href="/sign-in">Sign-in</a>
             <a href="/sign-in">Sign-out</a>
         </nav>
         <main role="main">
-            <section class="miles-total">
+           <section id="sign-in-section">
+               <header id="sign-in-header"><h5>Sign-in to Co<sub>2</sub>mmute Calculator</h5></header>
+               <form id="signin-form">
+                   <div>
+                       <label for="username"> Username</label>
+                       <input type="text" placeholder="Username" name="username" id="username"/>
+                   </div>
+                   <div>
+                       <label for="password">Password</label>
+                       <input type="text" placeholder="Password" name="password" id="password"/>
+                   </div>
+                   <button type="submit">Sign in</button>
+               </form>
+               <p>Not registered yet? <a href="#sign-up">Click here</a></p>
+           </section>
+            <header id="main-header" role="banner">
+                <h1>Co<sub>2</sub>mmute Calculator</h1>
+            </header>
+            <section id="purpose-statement">
+                <header>
+                    <h3>What is Co<sub>2</sub>mmute Calculator?</h3>
+                </header>
+                    <p>Co2mmute calculator is a simple way for bike commuters to keep track of their milage and the positive impact they are having each time they decide to pedal vs drive.</p>
+                    <p>[<em>infographic with stats of biking vs driving</em>]</p>
+
+            </section>
+            <section id="sign-up">
+                <header><h3>Start Calculating</h3></header>
+              <form id="signup-form">
+                  <div>
+                      <label for="username"> Username</label>
+                      <input type="text" placeholder="Username" name="username" id="username"/>
+                  </div>
+                  <div>
+                      <label for="password">Password</label>
+                      <input type="text" placeholder="Password" name="password" id="password"/>
+                  </div>
+                  <div>
+                      <label for="confirm-password">Re-enter Password</label>
+                      <input type="text" placeholder="Re-enter password" name="confirm-password" id="confirm-password"/>
+                  </div>
+                  <button type="submit">Sign up</button>
+              </form>
+            </section>
+            <section id="miles-total">
                 <header>
                     <h2>Miles Total</h2>
                 </header>
@@ -25,9 +69,9 @@
                 <div><h4>Average Sedan</h4> <br> 100lbs</div>
                 <div><h4>Average SUV</h4> <br> 200lbs</div>
             </section>
-            <section class="miles-input">
+            <section id="miles-input">
                 <header><h3>How many miles did you ride today?</h3></header>
-                <form class="miles-form">
+                <form id="miles-form">
                     <div>
                         <label for="miles">Date</label>
                         <input type="date" name="date" id="date"/>
@@ -40,11 +84,11 @@
                 </form>
             </section>
             <section>
-               <header>
-                   <h3>Miles to date</h3>
-               </header>
+                <header>
+                    <h3>Miles to date</h3>
+                </header>
                 <table>
-                   <tr>
+                    <tr>
                         <th>Date</th>
                         <th>Miles</th>
                         <th>CO<sub>2</sub> Diverted</th>
@@ -84,7 +128,7 @@
                         <td>7 miles</td>
                         <td>30 lbs</td>
                     </tr>
-                   <br>
+                    <br>
                     <tr>
                         <th>Total</th>
                         <td></td>
@@ -98,4 +142,3 @@
         </footer>
     </body>
 </html>
--->
