added images for the vehicles

--- a/public/index.html
+++ b/public/index.html
@@ -61,13 +61,16 @@
                   <button type="submit">Sign up</button>
               </form>
             </section>
+
+<!--            Mileage page-->
             <section id="miles-total">
                 <header>
                     <h2>Miles Total</h2>
+                    <p id="miles-number">500 miles</p>
                 </header>
-                <div><h4>Prius</h4> <br> 50lbs</div>
-                <div><h4>Average Sedan</h4> <br> 100lbs</div>
-                <div><h4>Average SUV</h4> <br> 200lbs</div>
+                <div><h4>Green <img src="/commute-calculator-final-capstone/images/co2mmute-green.png" alt="green car"></h4> <br> 50 lbs/co2</div>
+                <div><h4>Average Sedan <img src="/commute-calculator-final-capstone/images/co2mmute-average.png" alt="average car"></h4> <br> 100 lbs/co2</div>
+                <div><h4>Average SUV <img src="/commute-calculator-final-capstone/images/co2mmute-suv.png" alt="average suv"></h4> <br> 200 lbs/co2</div>
             </section>
             <section id="miles-input">
                 <header><h3>How many miles did you ride today?</h3></header>
