--- a/public/index.html
+++ b/public/index.html
@@ -86,9 +86,9 @@
                     <h2><span id="profileUsername">Username </span>Miles Total</h2>
                     <p id="miles-number">500 miles</p>
                 </header>
-                <div id="green-car"><h3>Green <img src="/commute-calculator-final-capstone/images/co2mmute-green.png" alt="green car"></h3> <br> <p>50 lbs/co2</p></div>
-                <div id="sedan-car"><h3>Average Sedan <img src="/commute-calculator-final-capstone/images/co2mmute-average.png" alt="average car"></h3> <br> <p>100 lbs/co2</p></div>
-                <div id="suv-car"><h3>Average SUV <img src="/commute-calculator-final-capstone/images/co2mmute-suv.png" alt="average suv"></h3> <br> <p>200 lbs/co2</p></div>
+                <div id="green-car"><h3>Green <img src="/commute-calculator-final-capstone/images/co2mmute-green.png" alt="green car"></h3> <br> <p>50mpg</p><p>50 lbs/co2</p></div>
+                <div id="sedan-car"><h3>Average Sedan <img src="/commute-calculator-final-capstone/images/co2mmute-average.png" alt="average car"></h3> <br><p>35mpg</p> <p>100 lbs/co2</p></div>
+                <div id="suv-car"><h3>Average SUV <img src="/commute-calculator-final-capstone/images/co2mmute-suv.png" alt="average suv"></h3> <br><p>18mpg</p> <p>200 lbs/co2</p></div>
             </section>
             <section id="miles-input">
                 <header><h2>How many miles did you ride today?</h2></header>
