media query updates

--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,11 @@
                <header id="sign-in-header"><h3>Sign-in to Co<sub>2</sub>mmute Calculator</h3></header>
                <form id="signin-form">
                    <div>
-                       <label for="username"> Username</label>
+                       <label id="signin-label" for="username"> Username</label>
                        <input type="text" placeholder="Username" name="username" id="username"/>
                    </div>
                    <div>
-                       <label for="password">Password</label>
+                       <label id="password-label" for="password">Password</label>
                        <input type="text" placeholder="Password" name="password" id="password"/>
                    </div>
                    <button id="js-signin-button" type="submit">Sign in</button>
@@ -59,11 +59,10 @@
                     <img src="/images/info-screenshot" alt="screenshots">
                 </div>
                 <div id="how-it-works">
-
                     <h1>Calculate your diverted CO<sub>2</sub></h1>
                     <ol>
                         <li>Input your daily bike mileage into our simple calculator</li><br>
-                        <li>Press submit and see how much co<sub>2</sub> you diverted by commuting</li>
+                        <li>Press CONVERT and see how much CO<sub>2</sub> you diverted by commuting</li>
                     </ol>
                 </div>
             </section>
