--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,10 @@
 
                 </div>
                    <div id="site-infographic">
-                    <img id="infographic" src="/images/co2mmuteInfographic.jpg" alt="cars infographic">
+                    <img id="infographic" src="./images/co2mmuteInfographic.jpg" alt="cars infographic">
                 </div>
                 <div id="submit-screen">
-                    <img src="/images/info-screenshot" alt="screenshots">
+                    <img src="./images/info-screenshot" alt="screenshots">
                 </div>
                 <div id="how-it-works">
                     <h1>Calculate your diverted CO<sub>2</sub></h1>
