images in heroku

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
                 </div>
                    <div id="site-infographic">
-                    <img id="infographic" src="./images/co2mmuteInfographic.jpg" alt="cars infographic">
+                    <img id="infographic" src="../images/co2mmuteInfographic.jpg" alt="cars infographic">
                 </div>
                 <div id="submit-screen">
                     <img src="./images/info-screenshot" alt="screenshots">
