getting js to work

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 
 
             <section id="purpose-statement">
-                <h1 id="purpose-header">What is Co<sub>2</sub>mmute Calculator?</h1>
+                <h2 id="purpose-header">What is Co<sub>2</sub>mmute Calculator?</h2>
                    <div id="site-description">
                     <p id="about-one">Co<sub>2</sub>mmute calculator is a simple way for bike commuters to keep track of their milage and calculate the amount of CO<sub>2</sub> diverted each time they pedal vs drive.</p>
 
@@ -60,10 +60,10 @@
                     <img id="infographic" src="/images/co2mmuteInfographic.jpg" alt="cars infographic">
                 </div>
                 <div id="submit-screen">
-                    <img src="/images/info-screenshot" alt="screenshots">
+                    <img src="/images/info-screenshot.jpg" alt="screenshots">
                 </div>
                 <div id="how-it-works">
-                    <h2>Calculate your diverted CO<sub>2</sub></h2><br>
+                    <h3>Calculate your diverted CO<sub>2</sub></h3><br>
                     <ol>
                         <li>Input your daily bike mileage into our simple calculator</li><br>
                         <li>Press CONVERT and see how much CO<sub>2</sub> you diverted by commuting</li>
@@ -71,7 +71,7 @@
                 </div>
             </section>
             <section id="sign-up">
-                <header><h1>Start Calculating</h1></header>
+                <header><h2>Start Calculating</h2></header>
               <form id="signup-form">
                   <div>
                       <label id="label-username" for="username"> Username</label>
@@ -95,7 +95,7 @@
             <main id="profile-page">
             <section id="miles-total">
                 <header>
-                    <h1><span id="profileUsername">'Username' </span>Miles Total</h1>
+                    <h2><span id="profileUsername">'Username' </span>Miles Total</h2>
                     <p id="miles-number">500 miles</p>
                 </header>
                 <div id="green-car">
@@ -116,7 +116,7 @@
                     </div> <img src="/images/co2mmute-suv.png" alt="average suv"><p>200 lbs/co2</p></div>
             </section>
             <section id="miles-input">
-                <header><h1>How many miles did you ride today?</h1></header>
+                <header><h2>How many miles did you ride today?</h2></header>
                 <form id="miles-form">
                     <div>
                         <label for="miles">Date</label>
@@ -131,7 +131,7 @@
             </section>
             <section>
                 <header>
-                    <h1>Miles to date</h1>
+                    <h2>Miles to date</h2>
                 </header>
                 <table>
                     <tr>
