trying to get signin to work

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
 
     <body>
         <nav role="navigation">
+            <div id="messageBox" class="demoMessage">
+                <span>Loading ...</span>
+                <!--            <button id="hideBtn">X</button>-->
+            </div>
             <div id="nav-logo">
                 <a href="#" id="main-logo">Co<sub>2</sub>mmute Calculator</a>
             </div>
